--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 
 	<!-- AUTOR DA PÁGINA -->
     <meta name="Author" content="Leonardo Alcântara Web designer, leogif" />
-
     <!-- FAVICON brecho XURUPITA -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 	<title>Brecho Ramos</title>
-
 	<!-- LEOGIF LAB CSS -->
 	<link rel="stylesheet" href="css/style.css">
 	<!-- BOOTSTRAP CSS -->
@@ -25,7 +23,6 @@
 	<link rel="stylesheet" href="font-awesome/female-solid.svg">
 	<link rel="stylesheet" href="font-awesome/shoe-prints-solid.svg">
 	<link rel="stylesheet" href="font-awesome/tshirt-solid.svg">
-
 </head>
 
 <body>
@@ -115,7 +112,7 @@
 				</div>
 
 				<div class="col-md-4 col-lg-4">
-					<img width="50" height="50" src="img/female-solid.svg" alt="" /> 
+					<img width="25%" src="img/dress-2.svg" alt="Icone para Roupas Femininas" /> 
 					<h2>Roupas Femininas</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -125,7 +122,7 @@
 				</div>
 
 				<div class="col-md-4 col-lg-4">
-					<img width="50" height="50" src="img/tshirt-solid.svg" alt="" /> 
+					<img width="25%" src="img/terno-masculino.svg" alt="Icone para Roupas Masculinas" /> 
 					<h2>Roupas Masculinas</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -135,7 +132,7 @@
 				</div>
 
 				<div class="col-md-4 col-lg-4">
-					<img width="50" height="50" src="img/shoe-prints-solid.svg" alt="" /> 
+					<img width="25%" src="img/boots-2.svg" alt="Icone para Calçados" /> 
 					<h2>Calçados</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
