add text produtos

--- a/index.html
+++ b/index.html
@@ -112,32 +112,22 @@
 				</div>
 
 				<div class="col-md-4 col-lg-4">
-					<img width="25%" src="img/dress-2.svg" alt="Icone para Roupas Femininas" /> 
+					<img width="30%" src="img/dress-2.svg" alt="Icone para Roupas Femininas" /> 
 					<h2>Roupas Femininas</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					<p>Conosco você irá encontrar um grande número de peças de qualidade, para qualquer ocasião seja para seu dia-a-dia, trabalho ou para um evento. Possuimos uma grande variedade de <strong>Roupas Femininas:</strong>, desde Calças Jeans, Shorts, Camisas, Saias, Vestidos de gala, Vestidos de festa. 
 					</p>
 				</div>
 
 				<div class="col-md-4 col-lg-4">
-					<img width="25%" src="img/terno-masculino.svg" alt="Icone para Roupas Masculinas" /> 
+					<img width="30%" src="img/terno-masculino.svg" alt="Icone para Roupas Masculinas" /> 
 					<h2>Roupas Masculinas</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</p>
+					<p>Já no quesito <strong>Roupas Masculinas:</strong> temos uma grande variedade de Camisas Sociais, Camisetas, Camisas Polos, Ternos, Blazers, Cintos (para utilizar com roupas sociais), Calças Sociais, Calças Sarja, Bermudas, Casacos.</p>
 				</div>
 
 				<div class="col-md-4 col-lg-4">
 					<img width="25%" src="img/boots-2.svg" alt="Icone para Calçados" /> 
 					<h2>Calçados</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					<p>Uma imensa variedade de Calçados: Femininos, Masculinos e Infantis.
 					</p>
 				</div>
 			</div>
