--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
     <meta name="Author" content="Leonardo Alcântara Web designer, leogif" />
     <!-- FAVICON brecho XURUPITA -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-	<title>Brecho Ramos</title>
+	<title>Brecho Ramos | Roupas Elegantes, com Preço Baixo</title>
 	<!-- LEOGIF LAB CSS -->
 	<link rel="stylesheet" href="css/style.css">
 	<!-- BOOTSTRAP CSS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<!-- FONT AWESOME CSS -->
 	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-	<link rel="stylesheet" href="font-awesome/female-solid.svg">
-	<link rel="stylesheet" href="font-awesome/shoe-prints-solid.svg">
-	<link rel="stylesheet" href="font-awesome/tshirt-solid.svg">
+	<link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet"> 
 </head>
 
 <body>
@@ -43,9 +41,9 @@
 		    <!-- LINK DE PÁGINAS NO NAV -->
 		    <div class="collapse navbar-collapse navbar-collapse-custom" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav navbar-right">
-		     	<li style="background-color: #FF5401; color: white;"><a href="index.html" title="Loja">LOJA VIRTUAL</a></li>
-		     	<li><a href="#sobre" title="Sobre">SOBRE</a></li>
-		     	<li><a href="#contato" title="Contato">CONTATO</a></li>
+		     	<li style="background-color: #FF5401; color: white;"><a style="color: #fff; text-transform: uppercase;"  href="index.html" title="Loja">Loja Virtual</a></li>
+		     	<li><a style="color: #111; text-transform: uppercase;" href="#sobre" title="Sobre">Sobre</a></li>
+		     	<li><a style="color: #111; text-transform: uppercase;" href="#contato" title="Contato">Contato</a></li>
 		      </ul>
 		    </div>	<!-- /.NAVBAR-COLLAPSE -->
 		  </div>	<!-- /.CONTAINER-FLUID -->
@@ -127,7 +125,7 @@
 				<div class="col-md-4 col-lg-4">
 					<img width="25%" src="img/boots-2.svg" alt="Icone para Calçados" /> 
 					<h2>Calçados</h2>
-					<p>Uma imensa variedade de Calçados: Femininos, Masculinos e Infantis.
+					<p>Uma imensa variedade de <strong>Calçados:</strong> Femininos, Masculinos e Infantis. Desde de numeração a tipo há tipo de calçados, sociais, casuais e esportivos (além dos infantis). Todos eles com estão em bom estado de conservação. 
 					</p>
 				</div>
 			</div>
@@ -139,23 +137,11 @@
 			<div class="row">
 				<div class="col-md-12 col-lg-12">
 				<a name="sobre"></a>
-				<h2 style="padding-bottom: 50px;color: #FF5A01;">Sobre o Brecho Ramos</h2>
+				<h2 id="sobre">Sobre o Brecho Ramos</h2>
 				</div>
 				<div class="col-md-6 col-lg-6">
-					<p style="color: #fff;">Para quem trabalha com desenvolvimento web, especialmente em projetos
-					open source e/ou produzindo free software, não é novidade nenhuma o advento
-					do  Git  e do  GitHub  que, sem exagero, mudaram a maneira como as pessoas
-					podem e conseguem criar, contribuir e se relacionar para a feitura e
-					aprimoramento de códigos e programas, na chamada Codificação Social.
-					Se você acompanha os artigos do desenvolvimento para web , já deve ter visto
-					que existe um artigo mostrando  como começar com o Git , que, na verdade, é um
-					screencast de 3h mostrando os principais comandos e fluxos para se trabalhar
-					com a melhor ferramenta para controle de versões da atualidade. Então, se você
-					ainda não assistiu,  corre lá e assiste !
-					Agora, se você já assistiu (ou já sabia o básico de Git/GitHub) e ainda tem
-					dúvidas, não se preocupe, isso é normal! Para sanar uma das dúvidas mais
-					comuns quando se está começando com Git/GitHub, que é como fazer o fork de
-					um projeto no GitHub, incluindo comandos e o fluxo necessário, assista a este</p>
+					<p style="color: #fff;">A <strong style="color: #FF5A01;">Brecho Ramos</strong> foi criada dada a necessidade ou a falta de opções do consumidor final, em encontrar uma loja onde ele possa encontrar roupas de boa qualidade e não produtos descartaveis. Que ele possa utilizar em diversos eventos e ambientes.</p>
+					<p style="color: #fff;">Aqui você pode encontrar o que você esta precisando para ir naquele evento em cima da hora, uma entrevista de emprego, um novo emprego com ambiente formal. Todas nossas peças são higienizadas. Compre com segurança através da <a href="#">nossa loja virtual</a>.</p>
 				</div>
 
 				<div id="console" class="col-md-6 col-lg-6">
@@ -176,36 +162,40 @@
 				</div><!-- -->
 				<div class="col-md-4 col-lg-4">
 					<h2>Localização</h2>
-					<h3>Endereco</h3>
 					<address>
-						<strong>Brecho Ramos | Brecho Chique</strong><br>
+						<strong>Brecho Ramos | Roupas Elegantes, com Preço Baixo</strong><br>
 	                    Rua Tenente Elias, 7<br>
 	                    São Paulo, São Paulo - SP CEP: 04472-100<br>
 	                    <abbr title="Telefone">Fone:</abbr>
-	                    <span>(11) 5672-9999</span>
-	                    <abbr title="Whatsapp"><i class="fa fa-whatsapp"></i></abbr>&nbsp;&nbsp;(11)94931-6690<br/>
+	                    <span>(11) 99767-8795</span>
+	                    <abbr title="Whatsapp"><i class="fa fa-whatsapp"></i></abbr>&nbsp;&nbsp;(11)97271-3778<br/>
 	                    <abbr>E-mail:&nbsp;</abbr>ramosbrecho@gmail.com
 	                </address>
 				</div>
 
 				<div class="col-md-4 col-lg-4">
-					<h2>Contato</h2>
+					<h2>Estamos Aqui</h2>
 					<i class="icon-map-marker"></i>&nbsp;&nbsp;
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.45885769793!2d-46.641286949841906!3d-23.695302584540993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce450454ebc33d%3A0x3c41978d433ff6ff!2sR.+Ten.+El%C3%ADas%2C+7+-+Pedreira%2C+S%C3%A3o+Paulo+-+SP%2C+04472-160!5e0!3m2!1sen!2sbr!4v1534028372848" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.45885769793!2d-46.641286949841906!3d-23.695302584540993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce450454ebc33d%3A0x3c41978d433ff6ff!2sR.+Ten.+El%C3%ADas%2C+7+-+Pedreira%2C+S%C3%A3o+Paulo+-+SP%2C+04472-160!5e0!3m2!1sen!2sbr!4v1534028372848" width="350" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
 
 				<div class="col-xs-12 col-lg-4">
-				<h2></h2>
+				<h2>Cadastre-Se</h2>
 					<form>
 						<div class="form-group">
-							<label for="E-mail">
-							<legend style="text-align: center;">Receba nossas Promoções Exclusivas</legend>
+							<label for="email">E-Mail</i></label>
 							<input class="form-control" type="email" name="email" placeholder="Cadastre seu E-mail" size="60" required>
-							</label>
-						</div>	<!-- /.CAMPO NOME -->
-
+						</div>
+						<div class="form-group">
+							<label for="nome">Nome</label>
+								<input class="form-control" type="text" name="nome" placeholder="Informe seu Nome" size="60">
+						</div>
+						<div class="form-group">
+							<label for="fone">WhatsApp</label>
+							<input class="form-control" type="phone" name="fone" placeholder="Informe o Nº do seu Whatsapp" size="60" required>
+						</div>	
 						<!-- BOTÃO ENVIAR -->
-						<input class="form-control btn btn-success" type="submit" name="enviar" value="Enviar">
+						<input class="form-control btn btn-danger" type="submit" name="enviar" value="Enviar">
 					</form>
 				</div> 	<!-- FORMULÁRIO DE CONTATO -->
 		</div>			<!-- /.CONTAINER -->
@@ -225,13 +215,6 @@
                         <li><a href="https://twitter.com/leogif"><i class="fa fa-twitter"></i></a>
                         </li>
                         <li><a href="https://github.com/leogif"><i class="fa fa-facebook"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
-                        <li><a class="btn btn-success" href="index.html">Home</a>
-                        </li>
                         </li>
                     </ul>
                 </div>
