--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 				<div class="col-md-6 col-lg-6">
 					<p style="color: #fff;">A <strong style="color: #FF5A01;">Brecho Ramos</strong> foi criada dada a necessidade ou a falta de opções do consumidor final, em encontrar uma loja onde ele possa encontrar roupas de boa qualidade e não produtos descartaveis. Que ele possa utilizar em diversos eventos e ambientes.</p>
 					<p style="color: #fff;">Aqui você pode encontrar o que você esta precisando para ir naquele evento em cima da hora, uma entrevista de emprego, um novo emprego com ambiente formal. Todas nossas peças são higienizadas. Compre com segurança através da <a href="#">nossa loja virtual</a>.</p>
+					<p style="color: #fff">Possuímos loja visita <a href="#contato">Venha nos Visitar.</a></p>
 				</div>
 
 				<div id="console" class="col-md-6 col-lg-6">
@@ -157,7 +158,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 col-lg-12">
-					<h2>Contato</h2>
+					<h2 id="contato">Contato</h2>
 					<a name="contato"></a>
 				</div><!-- -->
 				<div class="col-md-4 col-lg-4">
