--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <!-- PALAVRAS CHAVES PARA MECÂNIMOS DE BUSCA -->
     <meta name="Keywords" content="brecho zona sul sp, brecho zona sul são paulo, brecho diadema, brecho apura, brecho doroteia, loja de pizza, brecho pedreira, brecho pantanal, brecho rua dos dourados, loja de brecho sp, brecho sp, tinta industrial sp, tinta residêncial sp, site zona sul, websites zona sul, websites interlagos, tinta automotiva, tinta industrial, tinta residêncial, tintas e acessórios, tinta premium, tinta personalizada, misturador de tinta, tinta coral, tinta premium sp, tinta personalizada sp, misturador de tinta sp, tinta coral sp, tinta premium interlagos, sites personalizado interlagos, misturador de tinta interlagos, " />
 
+
+    <!-- Favicon e Icones -->
+	<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+	<link rel="manifest" href="img/site.webmanifest">
+	<link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
+
+
 	<!-- AUTOR DA PÁGINA -->
     <meta name="Author" content="Leonardo Alcântara Web designer, leogif" />
     <!-- FAVICON brecho XURUPITA -->
