--- a/index.html
+++ b/index.html
@@ -192,8 +192,9 @@
 				</div>
 
 				<div class="col-xs-12 col-lg-4">
-				<h2>Cadastre-Se</h2>
-					<form>
+				<h2>Cadastre-se</h2>
+					<form action="https://formspree.io/ramosbrecho@gmail.com"
+      method="POST">
 						<div class="form-group">
 							<label for="email">E-Mail</i></label>
 							<input class="form-control" type="email" name="email" placeholder="Cadastre seu E-mail" size="60" required>
@@ -207,7 +208,7 @@
 							<input class="form-control" type="phone" name="fone" placeholder="Informe o Nº do seu Whatsapp" size="60" required>
 						</div>	
 						<!-- BOTÃO ENVIAR -->
-						<input class="form-control btn btn-danger" type="submit" name="enviar" value="Enviar">
+						<input class="form-control btn btn-danger" type="submit" name="enviar" value="Send">
 					</form>
 				</div> 	<!-- FORMULÁRIO DE CONTATO -->
 		</div>			<!-- /.CONTAINER -->
