--- a/index.html
+++ b/index.html
@@ -208,7 +208,10 @@
 							<input class="form-control" type="phone" name="fone" placeholder="Informe o Nº do seu Whatsapp" size="60" required>
 						</div>	
 						<!-- BOTÃO ENVIAR -->
+						<!-- 
 						<input class="form-control btn btn-danger" type="submit" name="enviar" value="Send">
+						-->
+						<button class="form-control btn btn-danger" type="submit name="enviar" value="Send">Enviar</button>
 					</form>
 				</div> 	<!-- FORMULÁRIO DE CONTATO -->
 		</div>			<!-- /.CONTAINER -->
