add link lojaintegrada

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		    <!-- LINK DE PÁGINAS NO NAV -->
 		    <div class="collapse navbar-collapse navbar-collapse-custom" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav navbar-right">
-		     	<li style="background-color: #FF5401; color: white;"><a style="color: #fff; text-transform: uppercase;"  href="index.html" title="Loja">Loja Virtual</a></li>
+		     	<li style="background-color: #FF5401; color: white;"><a style="color: #fff; text-transform: uppercase;"  href="https://www.brecho-ramos.lojaintegrada.com.br" title="Loja">Loja Virtual</a></li>
 		     	<li><a style="color: #111; text-transform: uppercase;" href="#sobre" title="Sobre">Sobre</a></li>
 		     	<li><a style="color: #111; text-transform: uppercase;" href="#contato" title="Contato">Contato</a></li>
 		      </ul>
